fix scrollbar styling, some minor styling elsewhere

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   min-width: 18rem;
   padding: 2rem 0;
+  height: 92vh;
 
 
   &--centered {
@@ -26,8 +27,14 @@
 
   &__menu {
     flex: 1;
-    overflow-y:scroll;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
   }
+
+  &__menu::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
 }
 
 .map {
