--- a/src/components/Navbar/TopNav.scss
+++ b/src/components/Navbar/TopNav.scss
@@ -27,6 +27,7 @@
 
 .header {
   position:sticky;
+  height: 8vh;
   width: 100%;
   top: 0;
   z-index: 3;
